<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="412dp"
        android:layout_height="921dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.428">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/boton_soloida"
                android:layout_width="175dp"
                android:layout_height="43dp"
                android:layout_marginTop="168dp"
                android:layout_marginEnd="50dp"
                android:text="@string/boton_soloida"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/boton_idayvuelta"
                android:layout_width="175dp"
                android:layout_height="43dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="168dp"
                android:text="@string/boton_idayvuelta"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="311dp"
                android:layout_height="97dp"
                android:layout_marginTop="44dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.455"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/boton_soloida">

                <EditText
                    android:id="@+id/txt_origen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/icons8_vuelo01_24"
                    android:ems="10"
                    android:inputType="text"
                    android:text="@string/txt_origen" />

                <EditText
                    android:id="@+id/txt_destino"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/icons8_aterrizaje_24"
                    android:ems="10"
                    android:inputType="text"
                    android:text="@string/txt_destino" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="324dp"
                android:layout_height="58dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
                app:layout_constraintVertical_bias="0.056">

                <EditText
                    android:id="@+id/txt_ida"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/icons8_calendario_24"
                    android:ems="10"
                    android:inputType="date"
                    android:text="@string/txt_ida" />

                <EditText
                    android:id="@+id/txt_vuelta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/icons8_calendario_24"
                    android:ems="10"
                    android:inputType="date"
                    android:text="@string/txt_vuelta" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="308dp"
                android:layout_height="58dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.471"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                app:layout_constraintVertical_bias="0.232">

                <EditText
                    android:id="@+id/txt_adulto"
                    android:layout_width="284dp"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/icons8_asiento_24"
                    android:ems="10"
                    android:inputType="text"
                    android:text="@string/txt_clase" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="329dp"
                android:layout_height="63dp"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.53"
                app:layout_constraintStart_toStartOf="parent">

                <EditText
                    android:id="@+id/txt_clase"
                    android:layout_width="304dp"
                    android:layout_height="match_parent"
                    android:drawableLeft="@drawable/icons8_usuario_24"
                    android:drawableRight="@drawable/icons8_m_s_24"
                    android:ems="10"
                    android:inputType="text"
                    android:text="@string/txt_adulto" />

            </LinearLayout>

            <CheckBox
                android:id="@+id/check_millas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_millas"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.215"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.706" />

            <Button
                android:id="@+id/boton_buscarvuelos"
                android:layout_width="304dp"
                android:layout_height="61dp"
                android:layout_marginBottom="176dp"
                android:drawableLeft="@drawable/icons8_vuelo_24"
                android:text="@string/boton_buscarvuelos"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.453"
                app:layout_constraintStart_toStartOf="parent" />

            <FrameLayout
                android:id="@+id/frameLayout"
                android:layout_width="325dp"
                android:layout_height="87dp"
                android:layout_marginTop="44dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.505"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/boton_buscarvuelos"
                app:layout_constraintVertical_bias="0.0">

                <TextView
                    android:id="@+id/textview_mensaje"
                    android:layout_width="match_parent"
                    android:layout_height="61dp"
                    android:drawableLeft="@drawable/icons8_whatsapp_35"
                    android:text="@string/textview_mensaje" />
            </FrameLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="match_parent"
            android:layout_height="129dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/imglatam" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50px"
            android:layout_marginTop="250px"
            android:layout_marginEnd="50px"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10px"
                android:layout_weight="1"
                android:drawableLeft="@drawable/icons8_vacaciones_24"
                android:text="@string/boton_paquetes"
                android:textSize="10sp" />

            <Button
                android:id="@+id/button8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10px"
                android:layout_weight="1"
                android:drawableLeft="@drawable/icons8_hotel_24"
                android:text="@string/boton_hoteles"
                android:textSize="10sp" />

            <Button
                android:id="@+id/boton_vuelos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10px"
                android:layout_weight="1"
                android:drawableLeft="@drawable/icons8_vuelo_24"
                android:text="@string/boton_vuelos"
                android:textSize="10sp" />
        </LinearLayout>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>